plugins/de.cau.cs.kieler.krep.compiler/src/parser/scadeParser.java
// $ANTLR 3.1.1 scade.g 2009-06-09 17:10:33

            
  package parser;
  import java.util.LinkedList;
  
  import ceq.*;
  import ceq.Variable.Kind;
  import ceq.Expression;
  import prog.Type;
  import lustre.Operator;
//  import lustre.Scade;
  
  import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class scadeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "NUMBER", "Letter", "Digit", "WHITESPACE", "COMMENT", "'::'", "'bool'", "'int'", "','", "':'", "'\\''", "'when'", "'default'", "'='", "'last'", "'node'", "'returns'", "'('", "';'", "')'", "'let'", "'tel'", "'sig'", "'var'", "'..'", "'_'", "'emit'", "'if'", "'automaton'", "'initial'", "'final'", "'state'", "'unless'", "'until'", "'synchro'", "'end'", "'elsif'", "'else'", "'restart'", "'resume'", "'do'", "'{'", "'}'", "'not'", "'true'", "'false'", "'+'", "'-'", "'*'", "'/'", "'mod'", "'div'", "'<>'", "'<'", "'>'", "'<='", "'>='", "'and'", "'or'", "'xor'", "'real'", "'with'", "'['", "']'", "'.'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int ID=4;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__16=16;
    public static final int T__52=52;
    public static final int T__15=15;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__59=59;
    public static final int T__10=10;
    public static final int COMMENT=9;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int NUMBER=5;
    public static final int WHITESPACE=8;
    public static final int Digit=7;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int Letter=6;

    // delegates
    // delegators


        public scadeParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public scadeParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return scadeParser.tokenNames; }
    public String getGrammarFileName() { return "scade.g"; }


      Scade main;
      

      LinkedList<Variable> inputs = new LinkedList<Variable>();

     
      private LinkedList<Variable> toVar(LinkedList<String> vars, Kind io, Type t){
          LinkedList<Variable> res = new LinkedList<Variable>();
          for(String v: vars){
              res.add(Variable.get(v, io, t));
          }
          return res;
      }

      public void setProg(Scade main){
        this.main=main;
      }



    // $ANTLR start "program"
    // scade.g:42:1: program : user_op_decl ;
    public final void program() throws RecognitionException {
        try {
            // scade.g:42:9: ( user_op_decl )
            // scade.g:42:11: user_op_decl
            {
            pushFollow(FOLLOW_user_op_decl_in_program31);
            user_op_decl();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "path"
    // scade.g:45:1: path : ID ( '::' ID )* ;
    public final void path() throws RecognitionException {
        try {
            // scade.g:45:6: ( ID ( '::' ID )* )
            // scade.g:45:8: ID ( '::' ID )*
            {
            match(input,ID,FOLLOW_ID_in_path41); 
            // scade.g:45:11: ( '::' ID )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==10) ) {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==ID) ) {
                        int LA1_2 = input.LA(3);

                        if ( (LA1_2==10) ) {
                            alt1=1;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // scade.g:45:12: '::' ID
            	    {
            	    match(input,10,FOLLOW_10_in_path44); 
            	    match(input,ID,FOLLOW_ID_in_path46); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "path"


    // $ANTLR start "path_id"
    // scade.g:46:1: path_id : ( path '::' )? ID ;
    public final void path_id() throws RecognitionException {
        try {
            // scade.g:46:9: ( ( path '::' )? ID )
            // scade.g:46:11: ( path '::' )? ID
            {
            // scade.g:46:11: ( path '::' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==ID) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==10) ) {
                    alt2=1;
                }
            }
            switch (alt2) {
                case 1 :
                    // scade.g:46:12: path '::'
                    {
                    pushFollow(FOLLOW_path_in_path_id57);
                    path();

                    state._fsp--;

                    match(input,10,FOLLOW_10_in_path_id59); 

                    }
                    break;

            }

            match(input,ID,FOLLOW_ID_in_path_id63); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "path_id"


    // $ANTLR start "type_expr"
    // scade.g:51:1: type_expr returns [Type type] : ( 'bool' | 'int' );
    public final Type type_expr() throws RecognitionException {
        Type type = null;

        try {
            // scade.g:52:5: ( 'bool' | 'int' )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==11) ) {
                alt3=1;
            }
            else if ( (LA3_0==12) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // scade.g:52:7: 'bool'
                    {
                    match(input,11,FOLLOW_11_in_type_expr83); 
                     type =Type.BOOL; 

                    }
                    break;
                case 2 :
                    // scade.g:53:7: 'int'
                    {
                    match(input,12,FOLLOW_12_in_type_expr94); 
                     type =Type.INT; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return type;
    }
    // $ANTLR end "type_expr"

    public static class var_decls_return extends ParserRuleReturnScope {
        public LinkedList<String> vars;
        public Type type;
    };

    // $ANTLR start "var_decls"
    // scade.g:59:1: var_decls returns [LinkedList<String> vars, Type type] : v= var_id ( ',' v= var_id )* ':' t= type_expr ( when_decl )? ( default_decl )? ( last_decl )? ;
    public final scadeParser.var_decls_return var_decls() throws RecognitionException {
        scadeParser.var_decls_return retval = new scadeParser.var_decls_return();
        retval.start = input.LT(1);

        String v = null;

        Type t = null;


        try {
            // scade.g:60:5: (v= var_id ( ',' v= var_id )* ':' t= type_expr ( when_decl )? ( default_decl )? ( last_decl )? )
            // scade.g:60:7: v= var_id ( ',' v= var_id )* ':' t= type_expr ( when_decl )? ( default_decl )? ( last_decl )?
            {
            retval.vars = new LinkedList<String>();
            pushFollow(FOLLOW_var_id_in_var_decls143);
            v=var_id();

            state._fsp--;

             retval.vars.add(v); 
            // scade.g:62:9: ( ',' v= var_id )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==13) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // scade.g:62:10: ',' v= var_id
            	    {
            	    match(input,13,FOLLOW_13_in_var_decls157); 
            	    pushFollow(FOLLOW_var_id_in_var_decls161);
            	    v=var_id();

            	    state._fsp--;

            	     retval.vars.add(v); 

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            match(input,14,FOLLOW_14_in_var_decls176); 
            pushFollow(FOLLOW_type_expr_in_var_decls180);
            t=type_expr();

            state._fsp--;

            retval.type =t;
            // scade.g:63:42: ( when_decl )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==16) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // scade.g:63:42: when_decl
                    {
                    pushFollow(FOLLOW_when_decl_in_var_decls184);
                    when_decl();

                    state._fsp--;


                    }
                    break;

            }

            // scade.g:63:53: ( default_decl )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==17) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // scade.g:63:53: default_decl
                    {
                    pushFollow(FOLLOW_default_decl_in_var_decls187);
                    default_decl();

                    state._fsp--;


                    }
                    break;

            }

            // scade.g:63:67: ( last_decl )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==19) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // scade.g:63:67: last_decl
                    {
                    pushFollow(FOLLOW_last_decl_in_var_decls190);
                    last_decl();

                    state._fsp--;


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "var_decls"


    // $ANTLR start "var_id"
    // scade.g:67:1: var_id returns [String id] : ( '\\'' )? n= ID ;
    public final String var_id() throws RecognitionException {
        String id = null;

        Token n=null;

        try {
            // scade.g:68:5: ( ( '\\'' )? n= ID )
            // scade.g:68:7: ( '\\'' )? n= ID
            {
            // scade.g:68:7: ( '\\'' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==15) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // scade.g:68:7: '\\''
                    {
                    match(input,15,FOLLOW_15_in_var_id219); 

                    }
                    break;

            }

            n=(Token)match(input,ID,FOLLOW_ID_in_var_id224); 
            id = (n!=null?n.getText():null);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return id;
    }
    // $ANTLR end "var_id"


    // $ANTLR start "when_decl"
    // scade.g:71:1: when_decl : 'when' clock_expr ;
    public final void when_decl() throws RecognitionException {
        try {
            // scade.g:71:11: ( 'when' clock_expr )
            // scade.g:71:13: 'when' clock_expr
            {
            match(input,16,FOLLOW_16_in_when_decl239); 
            pushFollow(FOLLOW_clock_expr_in_when_decl241);
            clock_expr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "when_decl"


    // $ANTLR start "default_decl"
    // scade.g:72:1: default_decl : 'default' '=' expr ;
    public final void default_decl() throws RecognitionException {
        try {
            // scade.g:72:14: ( 'default' '=' expr )
            // scade.g:72:16: 'default' '=' expr
            {
            match(input,17,FOLLOW_17_in_default_decl248); 
            match(input,18,FOLLOW_18_in_default_decl250); 
            pushFollow(FOLLOW_expr_in_default_decl252);
            expr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "default_decl"


    // $ANTLR start "last_decl"
    // scade.g:73:1: last_decl : 'last' '=' expr ;
    public final void last_decl() throws RecognitionException {
        try {
            // scade.g:73:14: ( 'last' '=' expr )
            // scade.g:73:16: 'last' '=' expr
            {
            match(input,19,FOLLOW_19_in_last_decl262); 
            match(input,18,FOLLOW_18_in_last_decl264); 
            pushFollow(FOLLOW_expr_in_last_decl266);
            expr();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "last_decl"


    // $ANTLR start "user_op_decl"
    // scade.g:77:1: user_op_decl : 'node' id= ID in= params[Kind.INPUT] 'returns' out= params[Kind.OUTPUT] opt_body[main] ;
    public final void user_op_decl() throws RecognitionException {
        Token id=null;
        LinkedList<Variable> in = null;

        LinkedList<Variable> out = null;


        try {
            // scade.g:78:5: ( 'node' id= ID in= params[Kind.INPUT] 'returns' out= params[Kind.OUTPUT] opt_body[main] )
            // scade.g:78:7: 'node' id= ID in= params[Kind.INPUT] 'returns' out= params[Kind.OUTPUT] opt_body[main]
            {
            match(input,20,FOLLOW_20_in_user_op_decl285); 
            id=(Token)match(input,ID,FOLLOW_ID_in_user_op_decl289); 
             main.setName((id!=null?id.getText():null)); 
            pushFollow(FOLLOW_params_in_user_op_decl304);
            in=params(Kind.INPUT);

            state._fsp--;

            main.add(in); 
            match(input,21,FOLLOW_21_in_user_op_decl318); 
            pushFollow(FOLLOW_params_in_user_op_decl322);
            out=params(Kind.OUTPUT);

            state._fsp--;

            main.add(out); 
            pushFollow(FOLLOW_opt_body_in_user_op_decl337);
            opt_body(main);

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "user_op_decl"


    // $ANTLR start "params"
    // scade.g:85:1: params[Kind io] returns [LinkedList<Variable> vars] : '(' (v= var_decls ( ';' v= var_decls )* )? ')' ;
    public final LinkedList<Variable> params(Kind io) throws RecognitionException {
        LinkedList<Variable> vars = null;

        scadeParser.var_decls_return v = null;


        try {
            // scade.g:86:5: ( '(' (v= var_decls ( ';' v= var_decls )* )? ')' )
            // scade.g:86:7: '(' (v= var_decls ( ';' v= var_decls )* )? ')'
            {
             vars =new LinkedList<Variable>(); 
            match(input,22,FOLLOW_22_in_params375); 
            // scade.g:87:13: (v= var_decls ( ';' v= var_decls )* )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==ID||LA10_0==15) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // scade.g:87:14: v= var_decls ( ';' v= var_decls )*
                    {
                    pushFollow(FOLLOW_var_decls_in_params380);
                    v=var_decls();

                    state._fsp--;

                    vars.addAll(toVar((v!=null?v.vars:null), io, (v!=null?v.type:null)));
                    // scade.g:88:13: ( ';' v= var_decls )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==23) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                    	case 1 :
                    	    // scade.g:88:14: ';' v= var_decls
                    	    {
                    	    match(input,23,FOLLOW_23_in_params397); 
                    	    pushFollow(FOLLOW_var_decls_in_params401);
                    	    v=var_decls();

                    	    state._fsp--;

                    	    vars.addAll(toVar((v!=null?v.vars:null), io, (v!=null?v.type:null)));

                    	    }
                    	    break;

                    	default :
                    	    break loop9;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,24,FOLLOW_24_in_params411); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return vars;
    }
    // $ANTLR end "params"


    // $ANTLR start "opt_body"
    // scade.g:95:1: opt_body[Scope scope] : ( ';' | equation[scope] ';' | (s= signal_block )? (l= local_block )? 'let' ( equation[scope] ';' )* 'tel' ( ';' )? );
    public final void opt_body(Scope scope) throws RecognitionException {
        LinkedList<Variable> s = null;

        LinkedList<Variable> l = null;


        try {
            // scade.g:95:23: ( ';' | equation[scope] ';' | (s= signal_block )? (l= local_block )? 'let' ( equation[scope] ';' )* 'tel' ( ';' )? )
            int alt15=3;
            switch ( input.LA(1) ) {
            case 23:
                {
                alt15=1;
                }
                break;
            case ID:
            case 22:
            case 30:
            case 31:
            case 33:
                {
                alt15=2;
                }
                break;
            case 25:
            case 27:
            case 28:
                {
                alt15=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 15, 0, input);

                throw nvae;
            }

            switch (alt15) {
                case 1 :
                    // scade.g:95:25: ';'
                    {
                    match(input,23,FOLLOW_23_in_opt_body429); 

                    }
                    break;
                case 2 :
                    // scade.g:96:6: equation[scope] ';'
                    {
                    pushFollow(FOLLOW_equation_in_opt_body436);
                    equation(scope);

                    state._fsp--;

                    match(input,23,FOLLOW_23_in_opt_body439); 

                    }
                    break;
                case 3 :
                    // scade.g:97:6: (s= signal_block )? (l= local_block )? 'let' ( equation[scope] ';' )* 'tel' ( ';' )?
                    {
                    // scade.g:97:6: (s= signal_block )?
                    int alt11=2;
                    int LA11_0 = input.LA(1);

                    if ( (LA11_0==27) ) {
                        alt11=1;
                    }
                    switch (alt11) {
                        case 1 :
                            // scade.g:97:7: s= signal_block
                            {
                            pushFollow(FOLLOW_signal_block_in_opt_body449);
                            s=signal_block();

                            state._fsp--;

                            scope.add(s);

                            }
                            break;

                    }

                    // scade.g:98:13: (l= local_block )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==28) ) {
                        alt12=1;
                    }
                    switch (alt12) {
                        case 1 :
                            // scade.g:98:14: l= local_block
                            {
                            pushFollow(FOLLOW_local_block_in_opt_body472);
                            l=local_block();

                            state._fsp--;

                            scope.add(l); 

                            }
                            break;

                    }

                    match(input,25,FOLLOW_25_in_opt_body491); 
                    // scade.g:99:18: ( equation[scope] ';' )*
                    loop13:
                    do {
                        int alt13=2;
                        int LA13_0 = input.LA(1);

                        if ( (LA13_0==ID||LA13_0==22||(LA13_0>=30 && LA13_0<=31)||LA13_0==33) ) {
                            alt13=1;
                        }


                        switch (alt13) {
                    	case 1 :
                    	    // scade.g:99:19: equation[scope] ';'
                    	    {
                    	    pushFollow(FOLLOW_equation_in_opt_body494);
                    	    equation(scope);

                    	    state._fsp--;

                    	    match(input,23,FOLLOW_23_in_opt_body497); 

                    	    }
                    	    break;

                    	default :
                    	    break loop13;
                        }
                    } while (true);

                    match(input,26,FOLLOW_26_in_opt_body501); 
                    // scade.g:99:47: ( ';' )?
                    int alt14=2;
                    int LA14_0 = input.LA(1);

                    if ( (LA14_0==23) ) {
                        alt14=1;
                    }
                    switch (alt14) {
                        case 1 :
                            // scade.g:99:47: ';'
                            {
                            match(input,23,FOLLOW_23_in_opt_body503); 

                            }
                            break;

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "opt_body"


    // $ANTLR start "data_def"
    // scade.g:102:1: data_def[Scope scope] : ( equation[scope] ';' | sscope[scope] );
    public final void data_def(Scope scope) throws RecognitionException {
        try {
            // scade.g:103:5: ( equation[scope] ';' | sscope[scope] )
            int alt16=2;
            int LA16_0 = input.LA(1);

            if ( (LA16_0==ID||LA16_0==22||(LA16_0>=30 && LA16_0<=31)||LA16_0==33) ) {
                alt16=1;
            }
            else if ( (LA16_0==21||LA16_0==25||(LA16_0>=27 && LA16_0<=28)||LA16_0==32||(LA16_0>=34 && LA16_0<=36)||LA16_0==38||(LA16_0>=43 && LA16_0<=44)) ) {
                alt16=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 16, 0, input);

                throw nvae;
            }
            switch (alt16) {
                case 1 :
                    // scade.g:103:7: equation[scope] ';'
                    {
                    pushFollow(FOLLOW_equation_in_data_def526);
                    equation(scope);

                    state._fsp--;

                    match(input,23,FOLLOW_23_in_data_def529); 

                    }
                    break;
                case 2 :
                    // scade.g:104:7: sscope[scope]
                    {
                    pushFollow(FOLLOW_sscope_in_data_def537);
                    sscope(scope);

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "data_def"


    // $ANTLR start "sscope"
    // scade.g:108:1: sscope[Scope scope] : (s= signal_block )? (l= local_block )? ( eqs[scope] )? ;
    public final void sscope(Scope scope) throws RecognitionException {
        LinkedList<Variable> s = null;

        LinkedList<Variable> l = null;


        try {
            // scade.g:109:5: ( (s= signal_block )? (l= local_block )? ( eqs[scope] )? )
            // scade.g:109:7: (s= signal_block )? (l= local_block )? ( eqs[scope] )?
            {
            // scade.g:109:7: (s= signal_block )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==27) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // scade.g:109:8: s= signal_block
                    {
                    pushFollow(FOLLOW_signal_block_in_sscope569);
                    s=signal_block();

                    state._fsp--;

                     scope.add(s);

                    }
                    break;

            }

            // scade.g:110:9: (l= local_block )?
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==28) ) {
                alt18=1;
            }
            switch (alt18) {
                case 1 :
                    // scade.g:110:10: l= local_block
                    {
                    pushFollow(FOLLOW_local_block_in_sscope588);
                    l=local_block();
